# pluton

./: .gitignore  README.md  cabal-haskell.nix.project  cabal.project  flake.nix  plut.cabal  pluton.cabal
bench/: Bench.hs
examples/Example/Contract/Gift/: Test.hs
examples/Example/Contract/Gift/Validator/: Haskell.hs  Plutarch.hs  Pluto.hs
examples/contract/Pluton/Sample/: Test.hs
examples/contract/Pluton/Sample/Validator/: Haskell.hs  Pluto.hs
exe/: Main.hs
src/: Main.hs  Plut.hs  Pluton.hs
src/Plut/Sample/: Offchain.hs
src/Plut/Sample/Validator/: Haskell.hs  Plutarch.hs  Pluto.hs
src/Pluton/: Evaluate.hs  Run.hs
src/Pluton/Run/: Budget.hs  Evaluate.hs  ScriptSize.hs
src/Pluton/Sample/: Offchain.hs  Test.hs
src/Pluton/Sample/Validator/: Haskell.hs  Plutarch.hs
src/Pluton/Types/: Builtin.hs
src/Pluton/Types/Builtin/: Data.hs  Fun.hs  List.hs  Pair.hs  Trace.hs  Uni.hs
src/Pluton/Types/Builtin/Data/: Type.hs
src/Pluton/Types/Builtin/List/: Type.hs
src/Pluton/Types/Builtin/Pair/: Type.hs
test/: Spec.hs
test/Pluton/Types/Builtin/: ListSpec.hs
