cabal-version:      2.4
name:               plut
version:            0.1.0

author: Ardana Labs
maintainer: Sridhar Ratnakumar <srid@srid.ca>
license: MIT

extra-source-files: README.md

common common
  default-language: Haskell2010
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    TypeFamilies
    OverloadedStrings
    BangPatterns
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    MultiParamTypeClasses
    NamedWildCards
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StarIsType
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Plut
  build-depends:
    , base
    , plutus-core
    , plutus-ledger-api
    , text
    , hashable
    , bytestring
    , containers
    , plutus-tx
    , mtl
    , shower
    , tasty
    , tasty-quickcheck
    , tasty-hedgehog
    , hedgehog 
    , QuickCheck

