cabal-version:      2.4
name:               plut
version:            0.1.0
author:             Ardana Labs
maintainer:         Sridhar Ratnakumar <srid@srid.ca>
license:            MIT
extra-source-files: README.md
extra-source-files: src/**/*.pluto

common common
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    RankNTypes
    TypeApplications
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing

executable plut
  import:         common
  hs-source-dirs: src
  main-is:        Main.hs
  other-modules:
    Plut.Sample.Offchain
    Plut.Sample.Validator.Haskell
    Plut.Sample.Validator.Pluto

  build-depends:
    , base
    , bytestring
    , containers
    , freer-extras
    , hashable
    , hedgehog
    , lens
    , mtl
    , pluto
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck
    , shower
    , tasty
    , tasty-hedgehog
    , tasty-quickcheck
    , text
