cabal-version:      2.4
name:               pluton
version:            0.1.0
author:             Ardana Labs
maintainer:         Sridhar Ratnakumar <srid@srid.ca>
license:            MIT
extra-source-files: README.md
extra-source-files: src/**/*.pluto

common common
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DerivingStrategies
    GADTs
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing

executable pluton
  import:         common
  hs-source-dirs: src
  main-is:        Main.hs
  other-modules:
    Pluton.Sample.Offchain
    Pluton.Sample.Test
    Pluton.Sample.Validator.Haskell
    Pluton.Sample.Validator.Plutarch
    Pluton.Sample.Validator.Pluto
    Pluton.Types.Builtin
    Pluton.Types.Builtin.Data
    Pluton.Types.Builtin.List
    Pluton.Types.Builtin.Pair

  build-depends:
    , base
    , bytestring
    , containers
    , fin
    , freer-extras
    , hashable
    , hedgehog
    , lens
    , mtl
    , plutarch
    , pluto
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck
    , shower
    , tasty
    , tasty-hedgehog
    , tasty-quickcheck
    , text
