cabal-version:      2.4
name:               pluton
version:            0.1.0
author:             Ardana Labs
maintainer:         Sridhar Ratnakumar <srid@srid.ca>
license:            MIT
extra-source-files: README.md
extra-source-files: src/**/*.pluto

common common
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DerivingStrategies
    FlexibleContexts
    GADTs
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    Pluton
    Pluton.Evaluate
    Pluton.Types.Builtin
    Pluton.Types.Builtin.Data
    Pluton.Types.Builtin.Fun
    Pluton.Types.Builtin.List
    Pluton.Types.Builtin.Pair
    Pluton.Types.Builtin.Trace
    Pluton.Types.Builtin.Uni

  build-depends:
    , base
    , bytestring
    , containers
    , fin
    , freer-extras
    , hashable
    , hedgehog
    , lens
    , mtl
    , plutarch           >=1.0
    , pluto
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck
    , shower
    , tasty
    , tasty-hedgehog
    , tasty-quickcheck
    , text

library pluton-example-contract
  import:          common
  hs-source-dirs:  examples/contract
  exposed-modules:
    Pluton.Sample.Offchain
    Pluton.Sample.Test
    Pluton.Sample.Validator.Haskell
    Pluton.Sample.Validator.Plutarch
    Pluton.Sample.Validator.Pluto

  build-depends:
    , base
    , bytestring
    , containers
    , fin
    , freer-extras
    , hashable
    , hedgehog
    , lens
    , mtl
    , plutarch           >=1.0
    , pluto
    , pluton
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck
    , shower
    , tasty
    , tasty-hedgehog
    , tasty-quickcheck
    , text

executable pluton
  import:         common
  hs-source-dirs: exe
  main-is:        Main.hs
  build-depends:
    , base
    , plutarch
    , pluton
    , pluton-example-contract
    , plutus-contract
    , plutus-core

test-suite spec
  import:         common 
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:  Pluton.Types.Builtin.ListSpec
  build-depends:
    , base
    , bytestring
    , containers
    , either
    , exceptions
    , filepath
    , hedgehog
    , lens
    , mtl
    , pluton
    , plutus-core
    , QuickCheck
    , tasty
    , tasty-hedgehog
    , tasty-quickcheck
    , text
    , with-utf8

benchmark perf
  import:         common 
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Bench.hs 
  build-depends:
    , base
    , criterion
    , pluton
    , plutus-contract
    , plutus-core
