cabal-version:      2.4
name:               pluton
version:            0.1.0
author:             Ardana Labs
maintainer:         Sridhar Ratnakumar <srid@srid.ca>
license:            MIT
extra-source-files: README.md
extra-source-files: src/**/*.pluto

common common
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DerivingStrategies
    FlexibleContexts
    GADTs
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    Pluton
    Pluton.Run
    Pluton.Run.Budget
    Pluton.Run.Evaluate
    Pluton.Types.Builtin
    Pluton.Types.Builtin.Data
    Pluton.Types.Builtin.Fun
    Pluton.Types.Builtin.List
    Pluton.Types.Builtin.Pair
    Pluton.Types.Builtin.Trace
    Pluton.Types.Builtin.Uni

  build-depends:
    , base
    , bytestring
    , cardano-api
    , cardano-ledger-alonzo
    , cassava
    , containers
    , data-default
    , fin
    , flat
    , foldl
    , freer-extras
    , freer-simple
    , hashable
    , hedgehog
    , lens
    , mtl
    , plutarch               >=1.0
    , pluto
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck
    , serialise
    , shower
    , streaming
    , tasty
    , tasty-hedgehog
    , tasty-quickcheck
    , text

library pluton-examples
  import:          common
  hs-source-dirs:  examples
  exposed-modules:
    Example.Contract.Gift.Offchain
    Example.Contract.Gift.Test
    Example.Contract.Gift.Validator.Haskell
    Example.Contract.Gift.Validator.Plutarch
    Example.Contract.Gift.Validator.Pluto

  build-depends:
    , base
    , bytestring
    , containers
    , fin
    , freer-extras
    , hashable
    , hedgehog
    , lens
    , mtl
    , plutarch           >=1.0
    , pluto
    , pluton
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck
    , shower
    , tasty
    , tasty-hedgehog
    , tasty-quickcheck
    , text

executable pluton
  import:         common
  hs-source-dirs: exe
  main-is:        Main.hs
  build-depends:
    , base
    , plutarch
    , pluton
    , pluton-examples
    , plutus-contract
    , plutus-core

test-suite spec
  import:         common 
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:  Pluton.Types.Builtin.ListSpec
  build-depends:
    , base
    , bytestring
    , containers
    , either
    , exceptions
    , filepath
    , hedgehog
    , lens
    , mtl
    , pluton
    , plutus-core
    , QuickCheck
    , tasty
    , tasty-hedgehog
    , tasty-quickcheck
    , text

benchmark perf
  import:         common 
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Bench.hs 
  build-depends:
    , base
    , boxes
    , bytestring
    , cassava
    , criterion
    , data-default
    , foldl
    , mtl
    , pluton
    , pluton-examples
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , text
